force-app/main/default/objects/Avaya_Skills__c/Avaya_Skills__c.object-meta.xml
<CustomObject>
    <label>Avaya Skills</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avaya Skills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>