force-app/main/default/objects/Avaya_Skills__c/fields/Acceptable__c.field-meta.xml
<CustomField>
    <fullName>Acceptable__c</fullName>
    <label>Acceptable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>