force-app/main/default/objects/Avaya_Skills__c/fields/ACD_Calls__c.field-meta.xml
<CustomField>
    <fullName>ACD_Calls__c</fullName>
    <label>ACD Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>