force-app/main/default/objects/Avaya_Skills__c/fields/Agents_Available__c.field-meta.xml
<CustomField>
    <fullName>Agents_Available__c</fullName>
    <label>Agents Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>