force-app/main/default/objects/Avaya_Skills__c/fields/Call_Offered__c.field-meta.xml
<CustomField>
    <fullName>Call_Offered__c</fullName>
    <label>Call Offered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>