force-app/main/default/objects/Avaya_Skills__c/fields/Seksi_Skill__c.field-meta.xml
<CustomField>
    <fullName>Seksi_Skill__c</fullName>
    <label>Seksi Skill</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PSTN_Credit_Ind</fullName>
            </value>
            <value>
                <fullName>PSTN_Banking_Ind</fullName>
            </value>
            <value>
                <fullName>VOIP BANKING INA</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>VOIP CC INA</fullName>
            </value>
            <value>
                <fullName>DPLK</fullName>
            </value>
            <value>
                <fullName>EDC</fullName>
            </value>
            <value>
                <fullName>NIK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>