force-app/main/default/objects/Avaya_Skills__c/fields/Service_Level_SL__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_SL__c</fullName>
    <formula>IF(ACD_Calls__c = 0, 0, ACD_Calls__c / Call_Offered__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Service Level (SL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>