force-app/main/default/objects/Avaya_Skills__c/fields/Success_Call_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Success_Call_Ratio__c</fullName>
    <formula>IF(ACD_Calls__c = 0, 0, ACD_Calls__c / Call_Offered__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Success Call Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>